2014-6-19 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.04-03
    * R/jags: add parameters jags.module to handle module to be loaded.

2014-5-30 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.04-02
    * R/jags: update the method for generating Random.seed in jags()
    * R/jagsParallel:
        1. pass envir parameters, now can handle complex data
        2. fix a bug when passing model file as a function into jags.parallel()


2014-2-26 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.04-01
    * R/as.mcmc: fix counter error in update and autoupdate
    * R/update: fix counter error in update and autoupdate

2014-1-18 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.03-12
    * R/as.mcmc: fix a bug of casuing false convergence when n.chains==1

2013-8-21 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.03-11
    * clean up DESCRIPTION and NAMESPACE, changes are in depends and imports.

2013-8-16 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.03-10
    * R/jags: fix a minor gug in RNGname.

2013-7-14 Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.03-09
    * R/jags: users can set RNGname in jags() now.

2012-7-30  Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.03-08
    * R/jags: fix inits issue (thanks to Martyn Plummer)

2012-6-30  Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.03-07
    * R/as.bugs.array2: fix the code where array() meets dimension = NULL

2012-1-28  Yu-Sung Su <suyusung@tsinghua.edu.cn>
    * DESCRIPTION (Version, Date): 0.03-06.(Thanks to Ben Bolker)
    * R/jags:
        1. alow 4 ways of data input,
        2. alow bugs model as an R function.
    * man/jags: more example code to illustrate the added new features.

2012-1-27  Yu-Sung Su <suyusung@tsinghua.edu.cn>